--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
     "tailwindcss": "^3.4.4",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
