--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
     "tailwindcss": "^3.4.4",
