--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^10.4.19",
     "detectrtc": "^1.4.1",
     "postcss-cli": "^11.0.0",
+    "quagga": "^0.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
